<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">

<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/barcode_info"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/barcode_info" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:gravity="center_vertical|center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="打印份数："/>
        <EditText
            android:id="@+id/etPrintCopies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btOpenDialogue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:onClick="openPortDialogueClicked"
        android:text="@string/printer_connect" />
    <Button
        android:id="@+id/btPrint"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:text="@string/print"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btPrintTestPage"
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/print_test_page"
            android:visibility="gone"
            android:onClick="printTestPageClicked"
            />
        <TextView
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_hint"/>
    </LinearLayout>
</LinearLayout>

</ScrollView>
